--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,11 +1,11 @@
-/* by using sass which is a preprocessing scripting language its an extension to css sass stand for syntactically awesome stylesheet*/
-/* using sass for inly one feature which is to nest rolesets within each other because u cant do it with the plain css*/
-/* the rest will be plain css*/
-/* using the live sass compiler to convert the sass into the css main file and this will be linked with the html file*/
-/* so the css will be in mobile first css*/
+html,
 body {
-  margin: 1.5em;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
   font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
 }
 
 a {
@@ -17,20 +17,35 @@ a {
   position: absolute;
   top: 0;
   left: 0;
-  background: url("../assets/shoe.jpg");
-  background-size: cover;
+  background: url("../assets/shoe.jpg") center/cover no-repeat;
   background-position-x: 20%;
   background-position-y: 20%;
   width: 100%;
   height: 100vh;
   z-index: -1;
-  -webkit-animation: introLoad 2s forwards;
-          animation: introLoad 2s forwards;
+  animation: introLoad 2s forwards;
+}
+
+.wrapper {
+  position: relative;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+}
+header svg {
+  width: 2.3em;
+  margin-top: -0.6em;
+  cursor: pointer;
 }
 
 .logo {
   color: white;
   font-weight: bold;
+}
+.logo span {
+  color: inherit;
 }
 
 nav {
@@ -46,17 +61,17 @@ nav {
   transition: transform 0.5s ease-in-out;
 }
 nav ul {
-  list-style-type: none;
+  list-style: none;
   padding: 0;
   margin-top: 8em;
 }
 nav ul a {
   color: black;
-  padding: 0.75em, 2em;
+  padding: 0.75em 2em;
   display: block;
 }
 nav ul a:hover {
-  background: rgb(199, 199, 199);
+  background: rgb(235, 235, 235);
 }
 nav .close {
   float: right;
@@ -64,18 +79,12 @@ nav .close {
   width: 2.5em;
 }
 
-header {
-  display: flex;
-  justify-content: space-between;
-}
-header svg {
-  width: 2.5em;
-  margin-top: -0.6em;
-  cursor: pointer;
+.open-nav {
+  transform: translateX(0%);
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 3rem;
   margin-top: 2em;
   line-height: 3.3rem;
 }
@@ -87,14 +96,13 @@ h1 {
 section.hero {
   color: white;
   height: 90vh;
-  -webkit-animation: moveDown 1s ease-in-out forwards;
-          animation: moveDown 1s ease-in-out forwards;
+  animation: moveDown 1s ease-in-out forwards;
   opacity: 0;
 }
 section.hero .down-arrow {
   stroke: white;
   position: absolute;
-  bottom: 2em;
+  bottom: 8em;
   width: 1em;
   animation: moveArrow 1s alternate-reverse infinite;
 }
@@ -102,24 +110,63 @@ section.hero .down-arrow path {
   fill: white;
 }
 
-.more-info img {
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  height: 11em;
+.more-info {
+  display: flex;
+  flex-direction: column;
+  gap: 3em;
+  padding: 2em 0;
 }
-.more-info .title {
+.more-info .feature {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5em;
+}
+.more-info .feature .content {
+  text-align: center;
+  max-width: 25em;
+}
+.more-info .feature .content .title {
   font-weight: bold;
   font-size: 1.25rem;
+  margin-bottom: 0.5em;
 }
-.more-info .desc {
+.more-info .feature .content .desc {
   line-height: 1.5rem;
+  margin-bottom: 1em;
+}
+.more-info .feature img {
+  width: 100%;
+  max-width: 25em;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 8px;
+}
+@media (min-width: 920px) {
+  .more-info .feature.left {
+    flex-direction: row-reverse;
+    text-align: left;
+  }
+  .more-info .feature.left .content {
+    text-align: left;
+  }
+}
+@media (min-width: 920px) {
+  .more-info .feature {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 3em;
+  }
+  .more-info .feature .content {
+    text-align: right;
+  }
 }
 
 @media only screen and (min-width: 680px) {
   body {
     margin: 1.5em 5em;
-    font-family: "Poppins", sans-serif;
   }
 }
 @media only screen and (min-width: 920px) {
@@ -151,8 +198,8 @@ section.hero .down-arrow path {
     text-decoration: underline;
   }
   .hero-img {
-    left: unset;
     right: 0;
+    left: unset;
     width: 50%;
     height: 42em;
   }
@@ -168,42 +215,17 @@ section.hero .down-arrow path {
     width: 40%;
     margin-bottom: 8em;
   }
-  section.hero svg.down-arrow {
+  section.hero .subhead {
+    margin-bottom: 3em;
+  }
+  section.hero .down-arrow {
     stroke: black;
     position: unset;
   }
-  section.hero svg.down-arrow path {
+  section.hero .down-arrow path {
     fill: black;
   }
-  .feature {
-    display: grid;
-    grid-template-columns: repeat(2, auto);
-    gap: 3em;
-    margin-bottom: 8em;
-  }
-  .feature img {
-    width: 25em;
-  }
-  .feature .content {
-    text-align: right;
-    width: 25em;
-  }
-  .feature.left {
-    grid-template-areas: "left right";
-  }
-  .feature.left img {
-    grid-area: left;
-  }
-  .feature.left .content {
-    text-align: left;
-    width: 25em;
-    justify-self: left;
-  }
 }
-.open-nav {
-  transform: translateX(0%);
-}
-
 @media only screen and (min-width: 1200px) {
   .wrapper {
     width: 1200px;
@@ -213,32 +235,12 @@ section.hero .down-arrow path {
     gap: 0;
   }
 }
-@-webkit-keyframes introLoad {
-  from {
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-            clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-  }
-  to {
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-            clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-  }
-}
 @keyframes introLoad {
   from {
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-            clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
   }
   to {
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-            clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-  }
-}
-@-webkit-keyframes moveArrow {
-  from {
-    transform: translateY(-30px);
-  }
-  to {
-    transform: translateY(0);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
   }
 }
 @keyframes moveArrow {
@@ -247,15 +249,6 @@ section.hero .down-arrow path {
   }
   to {
     transform: translateY(0);
-  }
-}
-@-webkit-keyframes moveDown {
-  from {
-    transform: translateY(-100px);
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
   }
 }
 @keyframes moveDown {
