--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -1,285 +1,325 @@
-/* by using sass which is a preprocessing scripting language its an extension to css sass stand for syntactically awesome stylesheet*/
-/* using sass for inly one feature which is to nest rolesets within each other because u cant do it with the plain css*/
-/* the rest will be plain css*/
-/* using the live sass compiler to convert the sass into the css main file and this will be linked with the html file*/
+// /* by using sass which is a preprocessing scripting language its an extension to css sass stand for syntactically awesome stylesheet*/
+// /* using sass for inly one feature which is to nest rolesets within each other because u cant do it with the plain css*/
+// /* the rest will be plain css*/
+// /* using the live sass compiler to convert the sass into the css main file and this will be linked with the html file*/
 
-/* so the css will be in mobile first css*/
+// /* so the css will be in mobile first css*/
 
-
-
+// ========================
+// Base Styles
+// ========================
+html,
 body {
-    margin: 1.5em;
-    font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
 }
 
 a {
-    text-decoration: none;
-    font-size: 1.3rem;
+  text-decoration: none;
+  font-size: 1.3rem;
 }
 
+// ========================
+// Layout
+// ========================
 .hero-img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: url('../assets/shoe.jpg');
-    background-size: cover;
-    background-position-x: 20%;
-    background-position-y: 20%;
-    width: 100%;
-    height: 100vh;
-    z-index: -1;
-    animation: introLoad 2s forwards;
-    //overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: url('../assets/shoe.jpg') center/cover no-repeat;
+  background-position-x: 20%;
+  background-position-y: 20%;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+  animation: introLoad 2s forwards;
 }
 
-.logo {
-    color: white;
-    font-weight: bold;
-}
-
-nav {
-    position: fixed;
-    right: 0;
-    top: 0;
-    background: white;
-    height: 100vh;
-    width: 50%;
-    z-index: 999;
-    text-transform: uppercase;
-    transform: translateX(100%);
-    transition: transform .5s ease-in-out;
-
-    ul {
-        list-style-type: none;
-        padding: 0;
-        margin-top: 8em;
-
-        a {
-            color: black;
-            padding: .75em 2em;
-            display: block;
-
-            &:hover {
-                background: rgb(235, 235, 235);
-            }
-        }
-    }
-
-    .close {
-        float: right;
-        margin: 2em;
-        width: 2.5em;
-    }
+.wrapper {
+  position: relative;
 }
 
 header {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 
-    svg {
-        width: 2.3em;
-        margin-top: -.6em;
-        cursor: pointer;
-    }
+  svg {
+    width: 2.3em;
+    margin-top: -0.6em;
+    cursor: pointer;
+  }
 }
 
-h1 {
-    font-size: 3rem;
-    margin-top: 2em;
-    line-height: 3.3rem;
+// ========================
+// Navigation
+// ========================
+.logo {
+  color: white;
+  font-weight: bold;
+
+  span {
+    color: inherit;
+  }
 }
 
-.subhead {
-    font-size: 1.4rem;
-}
+nav {
+  position: fixed;
+  right: 0;
+  top: 0;
+  background: white;
+  height: 100vh;
+  width: 50%;
+  z-index: 999;
+  text-transform: uppercase;
+  transform: translateX(100%);
+  transition: transform 0.5s ease-in-out;
 
-section.hero {
-    color: white;
-    height: 90vh;
-    animation: moveDown 1s ease-in-out forwards;
-    opacity: 0;
+  ul {
+    list-style: none;
+    padding: 0;
+    margin-top: 8em;
 
-    .down-arrow {
-        stroke: white;
-        position: absolute;
-        bottom: 8em;
-        width: 1em;
-        animation: moveArrow 1s alternate-reverse infinite;
+    a {
+      color: black;
+      padding: 0.75em 2em;
+      display: block;
 
-        path {
-            fill: white;
-        }
+      &:hover {
+        background: rgb(235, 235, 235);
+      }
     }
-}
+  }
 
-.more-info {
-
-    img {
-        width: 100%;
-        object-fit: cover;
-        height: 11em;
-    }
-
-    .title {
-        font-weight: bold;
-        font-size: 1.25rem;
-    }
-    .desc {
-        line-height: 1.5rem;
-    }
+  .close {
+    float: right;
+    margin: 2em;
+    width: 2.5em;
+  }
 }
 
 .open-nav {
-    transform: translateX(0%);
+  transform: translateX(0%);
 }
 
-@media only screen and (min-width: 680px) {
+// ========================
+// Hero Section
+// ========================
+h1 {
+  font-size: 3rem;
+  margin-top: 2em;
+  line-height: 3.3rem;
+}
 
-    body {
-        margin: 1.5em 5em;
-        font-family: 'Poppins', sans-serif;
+.subhead {
+  font-size: 1.4rem;
+}
+
+section.hero {
+  color: white;
+  height: 90vh;
+  animation: moveDown 1s ease-in-out forwards;
+  opacity: 0;
+
+  .down-arrow {
+    stroke: white;
+    position: absolute;
+    bottom: 8em;
+    width: 1em;
+    animation: moveArrow 1s alternate-reverse infinite;
+
+    path {
+      fill: white;
+    }
+  }
+}
+
+// ========================
+// Features Section
+// ========================
+.more-info {
+  display: flex;
+  flex-direction: column;
+  gap: 3em;
+  padding: 2em 0;
+
+  .feature {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5em;
+
+    .content {
+      text-align: center;
+      max-width: 25em;
+
+      .title {
+        font-weight: bold;
+        font-size: 1.25rem;
+        margin-bottom: 0.5em;
+      }
+
+      .desc {
+        line-height: 1.5rem;
+        margin-bottom: 1em;
+      }
     }
 
+    img {
+      width: 100%;
+      max-width: 25em;
+      height: auto;
+      object-fit: cover;
+      border-radius: 8px;
+    }
+
+    &.left {
+      @media (min-width: 920px) {
+        flex-direction: row-reverse;
+        text-align: left;
+
+        .content {
+          text-align: left;
+        }
+      }
+    }
+  }
+
+  @media (min-width: 920px) {
+    .feature {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      gap: 3em;
+
+      .content {
+        text-align: right;
+      }
+    }
+  }
+}
+
+// ========================
+// Media Queries
+// ========================
+@media only screen and (min-width: 680px) {
+  body {
+    margin: 1.5em 5em;
+  }
 }
 
 @media only screen and (min-width: 920px) {
+  .menu {
+    display: none;
+  }
 
-    .menu {
-        display: none;
+  nav {
+    transform: translateX(0);
+    position: unset;
+    display: block;
+    width: auto;
+    height: auto;
+    background: none;
+
+    svg.close {
+      display: none;
     }
 
-    nav {
-        transform: translateX(0);
-        position: unset;
-        display: block;
-        width: auto;
-        height: auto;
-        background: none;
+    ul {
+      display: flex;
+      margin: 0;
 
-        svg.close {
-            display: none;
+      a {
+        color: white;
+        padding: 0.5em 1.5em;
+        font-size: 0.9rem;
+
+        &:hover {
+          background: none;
+          text-decoration: underline;
         }
+      }
+    }
+  }
 
-        ul {
-            display: flex;
-            margin: 0;
+  .hero-img {
+    right: 0;
+    left: unset;
+    width: 50%;
+    height: 42em;
+  }
 
-            a {
-                color: white;
-                padding: .5em 1.5em;
-                font-size: .9rem;
+  .logo {
+    color: black;
 
-                &:hover {
-                    background: none;
-                    text-decoration: underline;
-                }
-            }
-        }
+    span {
+      color: red;
+    }
+  }
+
+  section.hero {
+    color: black;
+    height: auto;
+    width: 40%;
+    margin-bottom: 8em;
+
+    .subhead {
+      margin-bottom: 3em;
     }
 
-    .hero-img {
-        left: unset;
-        right: 0;
-        width: 50%;
-        height: 42em;
+    .down-arrow {
+      stroke: black;
+      position: unset;
+
+      path {
+        fill: black;
+      }
     }
-
-    .logo {
-        color: black;
-
-        span {
-            color: red;
-        }
-    }
-
-    section.hero {
-        color: black;
-        height: auto;
-        width: 40%;
-        margin-bottom: 8em;
-
-        .subhead {
-            margin-bottom: 3em;
-        }
-
-        svg.down-arrow {
-            stroke: black;
-            position: unset;
-
-            path {
-                fill: black;
-            }
-        }
-    }
-
-    .feature {
-        display: grid;
-        grid-template-columns: repeat(2, auto);
-        gap: 3em;
-        margin-bottom: 8em;
-
-        img {
-            width: 25em;
-        }
-
-        .content {
-            text-align: right;
-            width: 25em;
-        }
-    }
-
-    .feature.left {
-        grid-template-areas: 
-            "left right";
-        
-        img {
-            grid-area: left;
-        }
-
-        .content {
-            text-align: left;
-            width: 25em;
-            justify-self: left;
-        }
-    }
-
+  }
 }
-
 
 @media only screen and (min-width: 1200px) {
-    .wrapper {
-        width: 1200px;
-        margin: 0 auto;
-    }
+  .wrapper {
+    width: 1200px;
+    margin: 0 auto;
+  }
 
-    .feature {
-        gap: 0;
-    }
+  .feature {
+    gap: 0;
+  }
 }
 
+// ========================
+// Animations
+// ========================
 @keyframes introLoad {
-    from {
-        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-    }
-    to {
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-    }
+  from {
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+  }
+  to {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  }
 }
 
 @keyframes moveArrow {
-    from {
-        transform: translateY(-30px)
-    }
-    to {
-        transform: translateY(0)
-    }
+  from {
+    transform: translateY(-30px);
+  }
+  to {
+    transform: translateY(0);
+  }
 }
+
 @keyframes moveDown {
-    from {
-        transform: translateY(-100px)
-    }
-    to {
-        transform: translateY(0);
-        opacity: 1;
-    }
+  from {
+    transform: translateY(-100px);
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
+
